Variable Configuration Update
Application now supports words of different lengths. Also supports guessing 1 - 8 words.

--- a/WordleWidget.ui
+++ b/WordleWidget.ui
@@ -19,119 +19,10 @@
      <property name="spacing">
       <number>20</number>
      </property>
-     <item alignment="Qt::AlignBottom">
-      <widget class="QLineEdit" name="lineEdit_1">
-       <property name="maximumSize">
-        <size>
-         <width>30</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>20</pointsize>
-        </font>
-       </property>
-       <property name="maxLength">
-        <number>1</number>
-       </property>
-      </widget>
-     </item>
-     <item alignment="Qt::AlignBottom">
-      <widget class="QLineEdit" name="lineEdit_2">
-       <property name="maximumSize">
-        <size>
-         <width>30</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>20</pointsize>
-        </font>
-       </property>
-       <property name="maxLength">
-        <number>1</number>
-       </property>
-      </widget>
-     </item>
-     <item alignment="Qt::AlignBottom">
-      <widget class="QLineEdit" name="lineEdit_3">
-       <property name="maximumSize">
-        <size>
-         <width>30</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>20</pointsize>
-        </font>
-       </property>
-       <property name="maxLength">
-        <number>1</number>
-       </property>
-      </widget>
-     </item>
-     <item alignment="Qt::AlignBottom">
-      <widget class="QLineEdit" name="lineEdit_4">
-       <property name="maximumSize">
-        <size>
-         <width>30</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>20</pointsize>
-        </font>
-       </property>
-       <property name="maxLength">
-        <number>1</number>
-       </property>
-      </widget>
-     </item>
-     <item alignment="Qt::AlignBottom">
-      <widget class="QLineEdit" name="lineEdit_5">
-       <property name="maximumSize">
-        <size>
-         <width>30</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>20</pointsize>
-        </font>
-       </property>
-       <property name="maxLength">
-        <number>1</number>
-       </property>
-      </widget>
-     </item>
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_comboBoxes">
-     <property name="spacing">
-      <number>20</number>
-     </property>
-     <item alignment="Qt::AlignTop">
-      <widget class="QComboBox" name="comboBox_1"/>
-     </item>
-     <item alignment="Qt::AlignTop">
-      <widget class="QComboBox" name="comboBox_2"/>
-     </item>
-     <item alignment="Qt::AlignTop">
-      <widget class="QComboBox" name="comboBox_3"/>
-     </item>
-     <item alignment="Qt::AlignTop">
-      <widget class="QComboBox" name="comboBox_4"/>
-     </item>
-     <item alignment="Qt::AlignTop">
-      <widget class="QComboBox" name="comboBox_5"/>
-     </item>
-    </layout>
+    <layout class="QVBoxLayout" name="verticalLayout_comboBoxes"/>
    </item>
    <item alignment="Qt::AlignHCenter|Qt::AlignBottom">
     <widget class="QPushButton" name="pushButton_submit">
